2009-02-04  Cosimo Cecchi  <cosimoc@gnome.org>

	* Alacarte/MainWindow.py: removed a call to
	gnome.ui.authentication_manager_init(), as that's not needed
	with GIO anymore. Thanks to Andreas Proschofsky.

2009-02-02  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: post-release bump to 0.11.9

==================== 0.11.8 ====================

2009-02-02  Cosimo Cecchi  <cosimoc@gnome.org>

	* NEWS:
	* README: version 0.11.8

2009-01-21  Frederic Peters  <fpeters@0d.be>

	* configure.ac: adds a pygtk.require() when detecting pygobject, so
	non-standard installation paths are considered.  (#568534)

2009-01-19  Vincent Untz  <vuntz@gnome.org>

	* Alacarte/MenuEditor.py: show all separators
	* configure.ac: require gnome-menus 2.22.2
	Fix bug #527635

2009-01-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: post-release bump to 0.11.8

==================== 0.11.7 ====================

2009-01-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* NEWS:
	* README: version 0.11.7

2009-01-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* Alacarte/MainWindow.py:
	* configure.ac: port to GIO. Based on a patch from Gian Mario
	Tagliaretti (#514574).

2009-01-19  Cosimo Cecchi  <cosimoc@gnome.org>

	* INSTALL:
	* Makefile.am:
	* configure.ac: use intltool 0.4.0.

2008-11-17  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.ac: better message for python libraries check.
	Part of bug #552186.

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.11.7

==================== 0.11.6 ====================

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: version 0.11.6

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: check for python 2.6. Fix bug #551751.

2008-09-11  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am:
	* alacarte.desktop.in.in:
	* alacarte.glade:
	* configure.ac:
	* data/Makefile.am:
	* data/icons/Makefile.am:
	* po/POTFILES.in:
	* po/POTFILES.skip:
	Create a data directory, and put data in there.